<resources>
    <string name="app_name">Assignment5AndroidApp</string>
    <string name="hamburger_menu">Hamburger Menu</string>
    <string name="pizza_ordering_app">Pizza Ordering App</string>
    <string name="main_menu">Main Menu</string>
    <string name="clear_order">Clear Order</string>
    <string name="price">Price:</string>
    <string name="_0_00">$0.00</string>
    <string name="add_to_order">Add To Order</string>
    <string name="remove_order">Remove Order</string>
    <string name="home_button">Home Button</string>
    <string name="order_pizza">Order Pizza</string>
    <string name="cart_button">Cart Button</string>
    <string name="order_history">Order History</string>
    <string name="export_orders">Export Orders</string>
    <string name="current_order">Current Order</string>
    <string name="new_york_pizza">New York Pizza</string>
    <string name="chicago_pizza">Chicago Pizza</string>
    <string name="cart">Cart</string>
    <string name="order_number">Order Number</string>
    <string name="ordernumber">orderNumber</string>
    <string name="subtotal">Subtotal $</string>
    <string name="subtotal_in">subtotal</string>
    <string name="sales_tax">Sales Tax $</string>
    <string name="sales">sales</string>
    <string name="order_total_dollar">Order Total $</string>
    <string name="ordertotal">ordertotal</string>
    <string name="amount_of_pizzas">Amount of Pizzas:</string>
    <string name="amt">amount</string>
    <string name="remove_pizza">Remove Pizza</string>
    <string name="add_pizza">Add Pizza</string>
    <string name="place_order">Place Order</string>
</resources>