<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
tools:context=".CurrentOrderActivity">

<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/top_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/AccentColorBlue"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        >

        <ImageButton
            android:id="@+id/hamburger_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/hamburger_menu"
            android:scaleType="centerInside"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/hamburger_menu"
            android:layout_gravity="start"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/pizza_ordering_app"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="40dp"

            />

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:id="@+id/mainMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/AccentColorCream"
        >


        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_order"
            android:textSize="34sp"
            android:textStyle="bold"
            android:textColor="@color/AccentColorBlue"
            android:gravity="start"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="80dp"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_number"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp" />

            <EditText
                android:id="@+id/orderNumberField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false"
                android:cursorVisible="false"
                android:clickable="false"
                android:inputType="none"
                android:text="@string/ordernumber" />
        </LinearLayout>

        <!-- Order List -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/orderRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="16dp" />

        <!-- Totals Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:weightSum="2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtotal" />

                <EditText
                    android:id="@+id/subtotalField"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:cursorVisible="false"
                    android:clickable="false"
                    android:inputType="none"
                    android:text="@string/subtotal_in" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sales_tax" />

                <EditText
                    android:id="@+id/salesTaxField"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:cursorVisible="false"
                    android:clickable="false"
                    android:inputType="none"
                    android:text="@string/sales" />
            </LinearLayout>
        </LinearLayout>

        <!-- Order Total and Amount -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:weightSum="2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_total_dollar" />

                <EditText
                    android:id="@+id/orderTotalField"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:cursorVisible="false"
                    android:clickable="false"
                    android:inputType="none"
                    android:text="@string/ordertotal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount_of_pizzas" />

                <EditText
                    android:id="@+id/amtOfPizzasField"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:cursorVisible="false"
                    android:clickable="false"
                    android:inputType="none"
                    android:text="@string/amt" />
            </LinearLayout>
        </LinearLayout>

        <!-- Action Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <Button
                android:id="@+id/removePizzaButton"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/AccentColorBlue"
                android:text="@string/remove_pizza"
                />

            <Button
                android:id="@+id/addPizzaButton"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:text="@string/add_pizza"
                android:backgroundTint="@color/AccentColorBlue"/>

            <Button
                android:id="@+id/clearOrderButton"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:text="@string/clear_order"
                android:backgroundTint="@color/AccentColorBlue"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/placeOrderButton"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/place_order"
                android:backgroundTint="@color/AccentColorMaroon"/>
        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/AccentColorBlue"
        android:elevation="4dp"
        android:layout_gravity="bottom"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        >

        <ImageButton
            android:id="@+id/home_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/home_icon"
            android:scaleType="centerInside"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/home_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            />

        <ImageButton
            android:id="@+id/pizza_ordering_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/pizza_icon"
            android:scaleType="centerInside"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/order_pizza"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            />

        <ImageButton
            android:id="@+id/cart_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/cart_icon"
            android:scaleType="centerInside"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/cart_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            />

        <ImageButton
            android:id="@+id/order_history_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/order_history_icon"
            android:scaleType="centerInside"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/order_history"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            />

    </androidx.appcompat.widget.Toolbar>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

