<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".OrderHistoryActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/top_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/AccentColorBlue"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            >

            <ImageButton
                android:id="@+id/hamburger_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/hamburger_menu"
                android:scaleType="centerInside"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/hamburger_menu"
                android:layout_gravity="start"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/pizza_ordering_app"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="40dp"

                />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/mainMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/AccentColorCream"
            >


            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_history"
                android:textSize="34sp"
                android:textStyle="bold"
                android:textColor="@color/AccentColorBlue"
                android:gravity="start"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="80dp"

                />

            <ListView
                android:id="@+id/orderListView"
                android:layout_width="400dp"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:dividerHeight="1dp"
                android:layout_gravity="center_horizontal"
                android:choiceMode="singleChoice"
                android:layout_marginBottom="50dp"
                />

            <Button
                android:id="@+id/cancelOrderButton"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/remove_order"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="100dp"
                android:backgroundTint="@color/AccentColorLightBlue"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_gravity="center"
                />

        </LinearLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/bottom_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/AccentColorBlue"
            android:elevation="4dp"
            android:layout_gravity="bottom"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            >

            <ImageButton
                android:id="@+id/home_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/home_icon"
                android:scaleType="centerInside"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/home_button"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="30dp"
                />

            <ImageButton
                android:id="@+id/pizza_ordering_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/pizza_icon"
                android:scaleType="centerInside"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/order_pizza"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="30dp"
                />

            <ImageButton
                android:id="@+id/cart_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/cart_icon"
                android:scaleType="centerInside"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/cart_button"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="30dp"
                />

            <ImageButton
                android:id="@+id/order_history_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/order_history_icon"
                android:scaleType="centerInside"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/order_history"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="30dp"
                />

        </androidx.appcompat.widget.Toolbar>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
